format code with keyboard shorcut, modify reset credit to add myself and my changes, add default styling to audio to fix overflow problems in the future

--- a/resources/css/reset.css
+++ b/resources/css/reset.css
@@ -4,42 +4,74 @@ html {
   color: rgb(90, 90, 90);
 }
 
-/* 
-  Josh's Custom CSS Reset
-  https://www.joshwcomeau.com/css/custom-css-reset/ */
+/* Was modified from Josh's Custom CSS https://www.joshwcomeau.com/css/custom-css-reset/ Reset but also includes custom styling I came up with on my own
+*/
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
+
 * {
   margin: 0;
   padding: 0;
 }
+
 body {
   margin: 0;
   padding: 0;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
 }
-img, picture, video, canvas, svg {
+
+img,
+picture,
+video,
+canvas,
+svg {
   display: block;
   max-width: 100%;
   height: auto;
 }
-input, button, textarea, select {
+
+/* width fixes audio controls from overflowing container and block helps have more control for styling */
+audio {
+  display: block;
+  width: 100%;
+}
+
+input,
+button,
+textarea,
+select {
   font: inherit;
 }
-h1, h2, h3, h4, h5, h6, p {
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
   overflow-wrap: break-word;
   text-wrap: balance;
 }
-ol, ul {
+
+ol,
+ul {
   list-style: none;
 }
-p, li, figcaption {
+
+p,
+li,
+figcaption {
   text-wrap: pretty;
   max-width: 65ch;
 }
-#root, #__next {
+
+#root,
+#__next {
   isolation: isolate;
 }
